--- a/public/main.css
+++ b/public/main.css
@@ -1,13 +1,5 @@
-* { 
-    box-sizing: border-box; 
-}
-
-html, body { 
-    margin: 0; 
-    padding: 0; 
-    height: 100%; 
-}
-
+* { box-sizing: border-box; }
+html, body { margin: 0; padding: 0; height: 100%; }
 .btn {
   display: inline-block;
   padding: 0 5px;
@@ -22,35 +14,18 @@ html, body {
   vertical-align: top;
   font-size: 12px;
 }
-
 input[type='text'], input[type='email'], input[type='password'], textarea {
   border-radius: 4px;
   height: 37px;
   padding: 10px;
   border: 1px solid silver;
 }
-
-.container { 
-    width: 100%; 
-    height: 100%; 
-}
-
+.container { width: 100%; height: 100%; }
 @media screen and (min-width: 800px) {
-  .container { 
-      width: 800px; 
-      margin: 0 auto; 
-    }
+  .container { width: 800px; margin: 0 auto; }
 }
-
-.input-group { 
-    margin-bottom: 15px; 
-}
-
-.input-group label { 
-    width: 25%; 
-    display: inline-block; 
-}
-
+.input-group { margin-bottom: 15px; }
+.input-group label { width: 25%; display: inline-block; }
 .input-group input { width: 70%; }
 .half { float: left; width: 50%; margin: 10px 0; }
 #join { float: right; }
